infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
spec:
  gatewayClassName: main
  listeners:
  - protocol: HTTP
    port: 80
    name: main-http
    hostname: hackcorp.net
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: main-https
    hostname: hackcorp.net
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: hackcorp-host-secret
        namespace: cert-manager
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: main-https-w
    hostname: '*.hackcorp.net'
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: hackcorp-host-secret
        namespace: cert-manager
    allowedRoutes:
      namespaces:
        from: All
